@@ -1,3 +1,7 @@
+2011-02-15  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #17587: htmlArea RTE: RTE should not be enabled on Android
+
 2011-02-11  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed issue #17552: htmlArea RTE: Delete deprecated class HTMLArea.Dialog
